test/fail/basic_syntax/list_strings_no_comma.lly
#[
SyntaxError: Unexpected token 'a string'.
    from list_strings_no_comma.lly:6
]#

var s = ["1" "2"]
